--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Telegram Bot Configuration
-BOT_TOKEN=your_bot_token_here
+BOT_TOKEN=
 
 # Database Configuration
 DATABASE_URL=sqlite+aiosqlite:///./bot_database.db
@@ -7,5 +7,3 @@ DATABASE_URL=sqlite+aiosqlite:///./bot_database.db
 # Optional: PostgreSQL example
 # DATABASE_URL=postgresql+asyncpg://user:password@localhost/dbname
 
-# Admin User IDs (comma-separated)
-ADMIN_IDS=123456789,987654321
